--- a/JSPEx/.settings/org.eclipse.wst.common.component
+++ b/JSPEx/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="JSPEx">
+    <wb-module deploy-name="CAR">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="JSPEx"/>
-        <property name="java-output-path" value="/JSPEx/build/classes"/>
+        <property name="java-output-path" value="/CAR/build/classes"/>
+        <property name="context-root" value="CAR"/>
     </wb-module>
 </project-modules>
